2002-04-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-pending (main): Have 'from_name' fall back to
	'from_address' if From: lacks a Fullname.

2002-04-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-pending (main): Bugfix.  If running in interactive and
	cache mode, remove the message from the cache after a `show'.

	(main): Add a (-T, --terse-summary) option.

2002-04-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-pending (main): Don't pass over delivered messages if
	running in batch / delete mode.

2002-03-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-rfilter (verify_confirm_cookie): Modify DELIVERED_CACHE to
	hold both the message filename, as well as how it was delivered
	('released' or 'confirmed').  

	Send a different confirm_accept.txt message depending on whether
	the message is being confirmed for the first time, confirmed after
	it was already manual released, or is a re-confirmation.

	Raise an IOError if the message lacks a Return-Path header.
	
2002-03-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-rfilter (release_pending): Move the CONFIRM_APPEND,
	CONFIRM_ACCEPT_NOTIFY, and CONFIRM_ACCEPT_CC processing to
	verify_confirm_cookie().

2002-03-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-rfilter (verify_confirm_cookie): Add the pending message's
	name to Defaults.DELIVERED_CACHE upon sucessful delivery instead
	of deleting it.  Then, consult the same cache to determine whether
	a pending message has already been delivered or not.  

	* tmda-pending (main): Skip messages which have already been
	delivered.
	
2002-03-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-inject (message_format): Util.formataddr() now handles the
	address header formatting.

2002-03-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-rfilter: -t option replaces both -A and -R.
