@@ -1,3 +1,8 @@
+2002-04-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-rfilter (verify_confirm_cookie): Catch messages sent
+	directly to a 'confirm-done' address.
+
 2002-04-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-pending (main): Have 'from_name' fall back to
